# sdkwork-assets

./: AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apps/: README.md
apps/sdkwork-assets-common/: AGENTS.md  README.md
apps/sdkwork-assets-common/.sdkwork/: README.md
apps/sdkwork-assets-common/.sdkwork/plugins/: README.md
apps/sdkwork-assets-common/.sdkwork/skills/: README.md
apps/sdkwork-assets-common/specs/: component.spec.json
apps/sdkwork-assets-pc/: .env.example  README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.base.json  vite.config.ts
apps/sdkwork-assets-pc/config/browser/: securityHeaders.ts
apps/sdkwork-assets-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-assets-pc/scripts/: prepare-shared-sdk-packages.mjs
apps/sdkwork-assets-pc/specs/: README.md  component.spec.json
apps/sdkwork-assets-pc/src/: index.css  main.tsx
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env
crates/sdkwork-api-assets-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-assets-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-assets-assembly/src/: bootstrap.rs  lib.rs
crates/sdkwork-api-assets-standalone-gateway/: Cargo.toml
crates/sdkwork-api-assets-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-assets-standalone-gateway/src/: main.rs
crates/sdkwork-assets-bridge-image/: Cargo.toml
crates/sdkwork-assets-bridge-image/src/: lib.rs
crates/sdkwork-assets-contract/: Cargo.toml
crates/sdkwork-assets-contract/specs/: component.spec.json
crates/sdkwork-assets-contract/src/: artifact.rs  lib.rs  media_kind.rs  media_resource.rs  provenance.rs
crates/sdkwork-assets-ingestion/: Cargo.toml
crates/sdkwork-assets-ingestion-drive/: Cargo.toml
crates/sdkwork-assets-ingestion-drive/src/: lib.rs
crates/sdkwork-assets-ingestion/specs/: component.spec.json
crates/sdkwork-assets-ingestion/src/: clawrouter.rs  drive_layout.rs  lib.rs  plan.rs  promote.rs  provider.rs
deployments/: README.md
docs/: README.md
docs/architecture/tech/: TECH-UNIFIED-ASSETS-PLATFORM.md  TECH_ARCHITECTURE.md
docs/engineering/plans/: STRUCTURE_ALIGNMENT_EXECUTION_PLAN.md
docs/product/prd/: PRD.md
scripts/: README.md
specs/: GOVERNANCE_EXCEPTIONS.md  README.md  architecture-alignment.md  component.spec.json  topology.spec.json
tests/: README.md  architecture-alignment.test.mjs  cross-repo-media-alignment.test.mjs  drive-openapi-alignment.test.mjs  platform-contracts.test.mjs  repository-structure.test.mjs
