[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-assets-standalone-gateway",
    "crates/sdkwork-api-assets-assembly",
  "crates/sdkwork-assets-contract",
  "crates/sdkwork-assets-ingestion",
  "crates/sdkwork-assets-ingestion-drive",
  "crates/sdkwork-assets-bridge-image",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-api-assets-assembly = { path = "crates/sdkwork-api-assets-assembly" }
sdkwork-assets-contract = { path = "crates/sdkwork-assets-contract" }
sdkwork-assets-ingestion = { path = "crates/sdkwork-assets-ingestion" }
sdkwork-assets-ingestion-drive = { path = "crates/sdkwork-assets-ingestion-drive" }
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-image-generation-service = { path = "../sdkwork-image/crates/sdkwork-image-generation-service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
