[package]
name = "sdkwork-api-assets-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-assets application HTTP plane."

[lib]
name = "sdkwork_api_assets_assembly"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
