[package]
name = "sdkwork-assets-bridge-image"
version.workspace = true
edition.workspace = true
description = "Image modality bridge: GeneratedMediaOutput → MediaArtifactBatch and drive plan alignment."

[dependencies]
sdkwork-assets-contract.workspace = true
sdkwork-assets-ingestion.workspace = true
sdkwork-image-generation-service = { workspace = true }

[dev-dependencies]
serde_json = "1"
sdkwork-image-generation-service = { workspace = true }
sdkwork-assets-ingestion-drive.workspace = true
