[package]
name = "sdkwork-assets-ingestion"
version.workspace = true
edition.workspace = true
description = "Unified multi-artifact ingestion orchestration over sdkwork-drive (planning + execution traits)."

[dependencies]
sdkwork-assets-contract.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
